--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Nighthawk Pages 
+title: Test blog
 description: "Class of 2025"
-owner_name: John Mortensen
-github_username: nighthawkcoders
+owner_name: Zhengji Li
+github_username: xinjiav2
 github_repo: "portfolio_2025" 
 baseurl: "/portfolio_2025"
 future: true
