--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Test blog
-description: "Class of 2025"
+description: "A test blog for CSSE at Del Norte"
 owner_name: Zhengji Li
 github_username: xinjiav2
 github_repo: "portfolio_2025_zhengji_li" 
@@ -9,9 +9,9 @@ remote_theme: jekyll/minima
 minima:
   skin: dark
   social_links:
-    - { platform: github, user_url: "https://github.com/nighthawkcoders"}
-    - { platform: x, user_url: "https://x.com/NighthawkCoding/" }
-    - { platform: youtube, user_url: "https://www.youtube.com/@nighthawkcodingsociety2868" } 
+    - { platform: github, user_url: "https://github.com/xinjiav2"}
+    - { platform: x, user_url: "" }
+    - { platform: youtube, user_url: "" } 
 # remote_theme: pages-themes/midnight@v0.2.0
 # remote_theme: pages-themes/dinky@v0.2.0
 # remote_theme: pages-themes/minimal@v0.2.0
