--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Test blog
+title: Blog - Zhengji Li
 description: "A test blog for CSSE at Del Norte"
 owner_name: Zhengji Li
 github_username: xinjiav2
